# ccaml

./: .gitignore  .ocamlformat  Dockerfile  README.md  ccaml.opam  docker-compose.yml  dune-project
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml
examples/: add.c  and.c  associativity.c  associativity2.c  div.c  less_or_equal.c  or.c  return_exclamation_1.c  sub.c
examples/invalid/: bad_arg.c  declaration_mismatch.c  else.c  function_redef.c  redefvar.c  syntax_err_too_few_for_clauses.c
examples/valid/: add.c  assign.c  assign2.c  assign3.c  block.c  block2.c  block3.c  block4.c  else.c  eq.c  for.c  for2.c  for3.c  for4.c  for5.c  for6.c  for_break.c  for_continue.c  forward_decl_multi_arg.c  greater_or_equal.c  hello_world.c  if.c  if_else.c  less.c  long_code.c  mult.c  nested_for_break.c  no_args.c  not_eq.c  one_arg.c  or2.c  return_29.c  return_minus_42.c  return_tilde_42.c  unused_exp.c  unused_exp2.c
lib/: assembly.ml  ast.ml  ast.mli  ccaml.bnf  compiler.ml  dune  lexer.ml  lexer.mli  parser.ml  parser.mli  string_util.ml  token.ml  util.ml  util.mli  var.ml
lib/assembly/: dune
lib/ast/: dune
lib/lexer/: dune  lexer.ml  lexer.mli
lib/parser/: dune  parser.ml
test/: assembly_test.ml  ast_inspect_test.expected  ast_inspect_test.ml  compiler_e2e_test.expected  compiler_e2e_test.ml  dune  lexer_test.ml  parser_test.ml  util_test.ml  var_test.ml
